Closed Bug 869845 Opened 13 years ago Closed 13 years ago

FirePlatformEvent shouldn't be virtual

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: surkov, Assigned: xuku)

References

(Blocks 1 open bug)

Details

(Whiteboard: [good first bug][mentor=surkov.alexander@gmail.com][lang=c++])

Attachments

(1 file, 1 obsolete file)

why can't we just put all that code in HandleAccevent()?
it seems ok
assigning to Zach per email.
Assignee: nobody → zach.xuku
Comment on attachment 749908 [details] [diff] [review] Takes FirePlatformEvent() code and makes it inline at the only call site per platform, removes declarations and definitions of the function. > AccessibleWrap::HandleAccEvent(AccEvent* aEvent) > { > NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT; > > nsresult rv = Accessible::HandleAccEvent(aEvent); > NS_ENSURE_SUCCESS(rv, rv); > >- return FirePlatformEvent(aEvent); >- >- NS_OBJC_END_TRY_ABORT_BLOCK_NSRESULT; >-} >- >-nsresult >-AccessibleWrap::FirePlatformEvent(AccEvent* aEvent) >-{ > NS_OBJC_BEGIN_TRY_ABORT_BLOCK_NSRESULT; I think you can remove this and then you won't need the second one at the end of the function.
Attachment #749908 - Flags: review?(trev.saunders) → review+
Attachment #749908 - Attachment is obsolete: true
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: