Bug 869845 - Place the FirePlatformEvent code inline at the only call site (per platform). Removed all declarations of FirePlatformEvent. r=tbsaunde